--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ I am a passionate web developer specializing in creating responsive and user-fri
                 <img src="assets/img/portfolio/labeling.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>EMD Technologies Philippines Inc.</h4>
-                  <p>RRF System</p>
+                  <p>Labeling System</p>
                   <a href="assets/img/portfolio/labeling.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link">
                     <i class="bi bi-zoom-in"></i>
                   </a>
@@ -377,7 +377,6 @@ I am a passionate web developer specializing in creating responsive and user-fri
 
           </div>
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
-
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/lot_history.JPG" class="img-fluid" alt="">
@@ -412,6 +411,95 @@ I am a passionate web developer specializing in creating responsive and user-fri
                   <h4>Provincial Government of Laguna</h4>
                   <p>Customer Satisfaction Management</p>
                   <a href="assets/img/portfolio/csm.png" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link">
+                    <i class="bi bi-zoom-in"></i>
+                  </a>
+                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+                </div>
+              </div>
+            </div>
+            <!-- End Portfolio Item -->
+
+          </div>
+          <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/tis.JPG" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Provincial Government of Laguna</h4>
+                  <p>Training Information System</p>
+                  <a href="assets/img/portfolio/tis.JPG" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link">
+                    <i class="bi bi-zoom-in"></i>
+                  </a>
+                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/eskwela.JPG" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Provincial Government of Laguna</h4>
+                  <p>AICS Information System</p>
+                  <a href="assets/img/portfolio/eskwela.JPG" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link">
+                    <i class="bi bi-zoom-in"></i>
+                  </a>
+                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/csm.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Provincial Government of Laguna</h4>
+                  <p>Procurement Information System</p>
+                  <a href="assets/img/portfolio/csm.png" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link">
+                    <i class="bi bi-zoom-in"></i>
+                  </a>
+                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+                </div>
+              </div>
+            </div>
+            <!-- End Portfolio Item -->
+
+          </div>
+          <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/tis.JPG" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Provincial Government of Laguna</h4>
+                  <p>LEMPCO Voting System</p>
+                  <a href="assets/img/portfolio/tis.JPG" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link">
+                    <i class="bi bi-zoom-in"></i>
+                  </a>
+                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/kawani.JPG" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Provincial Government of Laguna</h4>
+                  <p>Anilag eKawani</p>
+                  <a href="assets/img/portfolio/kawani.JPG" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link">
+                    <i class="bi bi-zoom-in"></i>
+                  </a>
+                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/mecos.JPG" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Provincial Government of Laguna</h4>
+                  <p>MISO MULTIPURPOSE COOPERATIVE SYSTEM</p>
+                  <a href="assets/img/portfolio/mecos.JPG" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link">
                     <i class="bi bi-zoom-in"></i>
                   </a>
                   <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
